# excel_calculator

./: README.md  pyproject.toml
excel_profit_calculator/: calculate_profit.py  const.py  custom_exceptions.py  custom_pyside.py  design_ui_python.py  main.py  product_class.py  user_interface.py  utility_functions.py  utils.py  wrappers.py
